Working on test window

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,6 +59,7 @@
         "./lib/omnisharp-atom/features/notification-handler.ts",
         "./lib/omnisharp-atom/features/package-restore.ts",
         "./lib/omnisharp-atom/features/rename.ts",
+        "./lib/omnisharp-atom/features/run-tests.ts",
         "./lib/omnisharp-atom/features/server-information.ts",
         "./lib/omnisharp-atom/features/solution-information.ts",
         "./lib/omnisharp-atom/linter.ts",
@@ -74,6 +75,7 @@
         "./lib/omnisharp-atom/views/rename-view.ts",
         "./lib/omnisharp-atom/views/solution-status-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
+        "./lib/omnisharp-atom/views/test-results-window.ts",
         "./lib/omnisharp-atom/views/tooltip-view.ts",
         "./lib/omnisharp-atom/world.ts",
         "./lib/typings.d.ts",
