--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,6 +54,7 @@
         "./lib/omnisharp-atom/features/intellisense.ts",
         "./lib/omnisharp-atom/features/lib/apply-changes.ts",
         "./lib/omnisharp-atom/features/lib/completion-provider.ts",
+        "./lib/omnisharp-atom/features/lib/linter-provider.ts",
         "./lib/omnisharp-atom/features/lib/omni-select-list-view.ts",
         "./lib/omnisharp-atom/features/log.ts",
         "./lib/omnisharp-atom/features/lookup.ts",
