--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   "package-dependencies": {
     "language-csharp": ">=0.3.0",
     "atom-yeoman": ">=0.3.0",
+    "linter": ">=1.0.0",
     "advanced-new-file": ">=0.4.3"
   }
 }
