Added framework selector, tweaked highlighting support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,7 @@
         "./lib/omni-sharp-server/omni.ts",
         "./lib/omni-sharp-server/view-model.ts",
         "./lib/omnisharp-atom/atom/dock.ts",
+        "./lib/omnisharp-atom/atom/framework-selector.ts",
         "./lib/omnisharp-atom/atom/status-bar.ts",
         "./lib/omnisharp-atom/atom/update-projects.ts",
         "./lib/omnisharp-atom/configure-rx.ts",
@@ -70,6 +71,7 @@
         "./lib/omnisharp-atom/views/dock-window.ts",
         "./lib/omnisharp-atom/views/find-pane-view.ts",
         "./lib/omnisharp-atom/views/find-symbols-view.ts",
+        "./lib/omnisharp-atom/views/framework-selector-view.ts",
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
         "./lib/omnisharp-atom/views/react-client-component.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
