--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
         "./lib/omni-sharp-server/view-model.ts",
         "./lib/omnisharp-atom/atom/dock.ts",
         "./lib/omnisharp-atom/atom/framework-selector.ts",
+        "./lib/omnisharp-atom/atom/metadata-opener.ts",
         "./lib/omnisharp-atom/atom/status-bar.ts",
         "./lib/omnisharp-atom/atom/update-projects.ts",
         "./lib/omnisharp-atom/configure-rx.ts",
