First iteration of command runner

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,7 @@
         "./lib/omnisharp-atom/features/code-action.ts",
         "./lib/omnisharp-atom/features/code-check.ts",
         "./lib/omnisharp-atom/features/code-format.ts",
+        "./lib/omnisharp-atom/features/command-runner.ts",
         "./lib/omnisharp-atom/features/error-handler.ts",
         "./lib/omnisharp-atom/features/find-symbols.ts",
         "./lib/omnisharp-atom/features/find-usages.ts",
@@ -70,6 +71,7 @@
         "./lib/omnisharp-atom/views/build-output-pane-view.ts",
         "./lib/omnisharp-atom/views/code-actions-view.ts",
         "./lib/omnisharp-atom/views/codecheck-output-pane-view.ts",
+        "./lib/omnisharp-atom/views/command-output-window.ts",
         "./lib/omnisharp-atom/views/dock-window.ts",
         "./lib/omnisharp-atom/views/find-pane-view.ts",
         "./lib/omnisharp-atom/views/find-symbols-view.ts",
