Minor tweaks to subjects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,6 +67,9 @@
         "./lib/omnisharp-atom/features/run-tests.ts",
         "./lib/omnisharp-atom/features/server-information.ts",
         "./lib/omnisharp-atom/features/solution-information.ts",
+        "./lib/omnisharp-atom/json/global-provider.ts",
+        "./lib/omnisharp-atom/json/project-provider.ts",
+        "./lib/omnisharp-atom/json/schema-provider.ts",
         "./lib/omnisharp-atom/omnisharp-atom.ts",
         "./lib/omnisharp-atom/views/build-output-pane-view.ts",
         "./lib/omnisharp-atom/views/code-actions-view.ts",
