--- a/package.json
+++ b/package.json
@@ -118,9 +118,9 @@
     }
   },
   "package-dependencies": {
-    "language-csharp": ">=0.3.0",
     "atom-yeoman": ">=0.3.0",
     "linter": ">=1.0.0",
+    "json-schema": ">=0.1.7",
     "advanced-new-file": ">=0.4.3"
   }
 }
