--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,7 @@
         "./lib/omnisharp-atom/features/intellisense.ts",
         "./lib/omnisharp-atom/features/lib/apply-changes.ts",
         "./lib/omnisharp-atom/features/lib/completion-provider.ts",
+        "./lib/omnisharp-atom/features/lib/framework-provider.ts",
         "./lib/omnisharp-atom/features/lib/linter-provider.ts",
         "./lib/omnisharp-atom/features/lib/omni-select-list-view.ts",
         "./lib/omnisharp-atom/features/lib/project-provider.ts",
