--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 version: "{build}"
 os: Windows Server 2012 R2
-
+evironment:
+  APM_TEST_PACKAGES: atom-yeoman linter json-schema advanced-new-file
 test: off
 deploy: off
 
