--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ notifications:
     on_success: never
     on_failure: change
 
-script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
+before_install:
+  - brew update
+  - brew install mono
+
+script:
+  - 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
 
 git:
   depth: 10
