Install dnvm including beta4

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ notifications:
     on_failure: change
 
 before_install:
+  - brew tap aspnet/dnx
   - brew update
-  - brew install mono
+  - brew install dnvm
+  - source dnvm.sh
+  - dnvm install 1.0.0-beta4
+  - dnvm upgrade
 
 script:
   - 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
