--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,9 +6,12 @@ deploy: off
 
 init:
   - cmd: rd /s /q %CHOCOLATEYINSTALL%
-  - ps: iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1'))
+  - ps: iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1'))\
+  - ps: &{$Branch='dev';iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.ps1'))}
 
 install:
+  - dnvm install 1.0.0-beta4
+  - dnvm upgrade
   - cinst atom -y
   - cd %APPVEYOR_BUILD_FOLDER%
   - "%LOCALAPPDATA%/atom/bin/apm install"
