--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,25 +1,17 @@
 version: "{build}"
+
 os: Windows Server 2012 R2
 
-test: off
-deploy: off
-
-init:
-  - cmd: rd /s /q %CHOCOLATEYINSTALL%
-  - ps: iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1'))\
-  - ps: &{$Branch='dev';iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.ps1'))}
-
 install:
-  - dnvm install 1.0.0-beta4
-  - dnvm upgrade
-  - cinst atom -y
+  - choco install atom -y
   - cd %APPVEYOR_BUILD_FOLDER%
+  - "%LOCALAPPDATA%/atom/bin/apm clean"
   - "%LOCALAPPDATA%/atom/bin/apm install"
-  - "%LOCALAPPDATA%/atom/bin/apm install atom-yeoman"
-  - "%LOCALAPPDATA%/atom/bin/apm install linter"
-  - "%LOCALAPPDATA%/atom/bin/apm install json-schema"
-  - "%LOCALAPPDATA%/atom/bin/apm install advanced-new-file"
 
 build_script:
   - cd %APPVEYOR_BUILD_FOLDER%
-  - "%LOCALAPPDATA%/atom/bin/apm test --path %LOCALAPPDATA%/atom/bin/atom.cmd"
+# - "%LOCALAPPDATA%/atom/bin/apm test --path %LOCALAPPDATA%/atom/bin/atom.cmd"
+
+test: off
+
+deploy: off
