--- a/tsconfig.json
+++ b/tsconfig.json
@@ -89,6 +89,7 @@
         "./lib/omnisharp-atom/world.ts",
         "./lib/typings.d.ts",
         "./spec/features/code-format-spec.ts",
+        "./spec/features/command-runner-spec.ts",
         "./spec/omnisharp-atom-spec.ts",
         "./spec/test-helpers.ts",
         "./spec/tsd.d.ts",
