Added support for multiple .sln files, added support for a lonely .cs file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -77,6 +77,7 @@
         "./lib/omnisharp-atom/views/find-pane-view.ts",
         "./lib/omnisharp-atom/views/find-symbols-view.ts",
         "./lib/omnisharp-atom/views/framework-selector-view.ts",
+        "./lib/omnisharp-atom/views/generic-list-view.ts",
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
         "./lib/omnisharp-atom/views/react-client-component.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
@@ -90,6 +91,7 @@
         "./spec/atom/framework-selector-spec.ts",
         "./spec/atom/status-bar-spec.ts",
         "./spec/atom/update-project-spec.ts",
+        "./spec/client-manager-spec.ts",
         "./spec/features/code-format-spec.ts",
         "./spec/features/command-runner-spec.ts",
         "./spec/features/find-symbols-spec.ts",
