--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
         "./lib/omni-sharp-server/view-model.ts",
         "./lib/omnisharp-atom/atom/dock.ts",
         "./lib/omnisharp-atom/atom/framework-selector.ts",
+        "./lib/omnisharp-atom/atom/generator-aspnet.ts",
         "./lib/omnisharp-atom/atom/status-bar.ts",
         "./lib/omnisharp-atom/atom/update-projects.ts",
         "./lib/omnisharp-atom/configure-rx.ts",
