--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,17 +3,21 @@ version: "{build}"
 os: Windows Server 2012 R2
 
 install:
-  - choco install atom -y
-  - cd %APPVEYOR_BUILD_FOLDER%
-#  - "%LOCALAPPDATA%/atom/bin/apm clean"
-#  - "%LOCALAPPDATA%/atom/bin/apm install"
+  - appveyor DownloadFile https://atom.io/download/windows -FileName AtomSetup.exe
+  - AtomSetup.exe /silent
+  - set PATH=%LOCALAPPDATA%\atom\bin;%GOPATH%\bin;c:\go\bin;%PATH%
+  - apm install atom-yeoman
+  - apm install linter
+  - apm install json-schema
+  - apm install advanced-new-file
 
+# to run your custom scripts instead of automatic MSBuild
 build_script:
-#  - cd %APPVEYOR_BUILD_FOLDER%
-# - "%LOCALAPPDATA%/atom/bin/apm test --path %LOCALAPPDATA%/atom/bin/atom.cmd"
+  - cd %APPVEYOR_BUILD_FOLDER%
+  - SET PATH=%LOCALAPPDATA%\atom\bin;%GOPATH%\bin;%PATH%
+  - apm clean
+  - apm install
+  - apm test
 
 test: off
-
 deploy: off
-
-build: off
