--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - source dnvm.sh
   - dnvm install 1.0.0-beta4
   - dnvm upgrade
+  - sh ./install-fixtures.sh
 
 script:
   - 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
@@ -20,4 +21,4 @@ git:
   depth: 10
 
 env:
-  - APM_TEST_PACKAGES='atom-yeoman linter json-schema advanced-new-file'
+  - APM_TEST_PACKAGES='atom-yeoman linter json-schema advanced-new-file language-cshtml'
