--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ install:
   - apm install json-schema
   - apm install advanced-new-file
   - apm install language-cshtml
+  - ps: .\install-fixtures.ps1
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
