--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "noImplicitAny": false,
         "removeComments": false
     },
+    "moduleResolution": "node",
     "formatCodeOptions": {
         "indentSize": 4,
         "tabSize": 4,
