Attempt to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - dnvm upgrade
 
 script:
-  - 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
+  - ./build-package.sh
 
 git:
   depth: 10
