--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "del": "^1.1.1",
     "escape-html": "^1.0.1",
     "event-kit": "^1.3.0",
+    "fastdom": "^0.8.6",
     "font-awesome": "^4.4.0",
     "fs-plus": "^2.3.1",
     "fuzzaldrin": "^2.1.0",
