--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,8 +48,10 @@
         "./lib/omnisharp-atom/features/code-action.ts",
         "./lib/omnisharp-atom/features/code-check.ts",
         "./lib/omnisharp-atom/features/code-format.ts",
+        "./lib/omnisharp-atom/features/code-lens-button.ts",
         "./lib/omnisharp-atom/features/code-lens.ts",
         "./lib/omnisharp-atom/features/command-runner.ts",
+        "./lib/omnisharp-atom/features/enhanced-highlighting-button.ts",
         "./lib/omnisharp-atom/features/find-symbols.ts",
         "./lib/omnisharp-atom/features/find-usages.ts",
         "./lib/omnisharp-atom/features/go-to-definition.ts",
