Added reload-workspace, this is a new command that can be run to synchronize files with omnisharp to ensure they are up to date

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,6 +61,7 @@
         "./lib/omnisharp-atom/features/notification-handler.ts",
         "./lib/omnisharp-atom/features/package-restore.ts",
         "./lib/omnisharp-atom/features/project-lock.ts",
+        "./lib/omnisharp-atom/features/reload-workspace.ts",
         "./lib/omnisharp-atom/features/rename.ts",
         "./lib/omnisharp-atom/features/run-tests.ts",
         "./lib/omnisharp-atom/features/server-information.ts",
