Remove bad less vaiable that doesn't exist any longer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "formatCodeOptions": {
         "indentSize": 4,
         "tabSize": 4,
-        "newLineCharacter": "\r\n",
+        "newLineCharacter": "CRLF",
         "convertTabsToSpaces": true,
         "insertSpaceAfterCommaDelimiter": true,
         "insertSpaceAfterSemicolonInForStatements": true,
