--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ root = true
 [*]
 indent_style = space
 indent_size = 4
-end_of_line = lf
+#end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
