--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "font-awesome": "^4.4.0",
     "fs-plus": "^2.3.1",
     "fuzzaldrin": "^2.1.0",
-    "generator-aspnet": "^0.0.60",
+    "generator-aspnet": "0.0.60",
     "glob": "^5.0.5",
     "gulp": "^3.8.11",
     "gulp-util": "^3.0.6",
@@ -76,7 +76,7 @@
     "lodash": "^3.10.1",
     "merge-stream": "^0.1.7",
     "ntypescript": "1.201509010003.1",
-    "omnisharp-client": "^2.1.2",
+    "omnisharp-client": "^2.1.3",
     "react": "^0.13.3",
     "rimraf": "^2.4.2",
     "rx": "^3.1.2",
