Added basic support for signatures, next to style

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,6 +65,7 @@
         "./lib/omnisharp-atom/features/rename.ts",
         "./lib/omnisharp-atom/features/run-tests.ts",
         "./lib/omnisharp-atom/features/server-information.ts",
+        "./lib/omnisharp-atom/features/signature-help.ts",
         "./lib/omnisharp-atom/features/solution-information.ts",
         "./lib/omnisharp-atom/omnisharp-atom.ts",
         "./lib/omnisharp-atom/services/apply-changes.ts",
@@ -85,6 +86,7 @@
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
         "./lib/omnisharp-atom/views/react-client-component.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
+        "./lib/omnisharp-atom/views/signature-help-view.ts",
         "./lib/omnisharp-atom/views/solution-status-view.ts",
         "./lib/omnisharp-atom/views/status-bar-view.ts",
         "./lib/omnisharp-atom/views/test-results-window.ts",
@@ -112,6 +114,7 @@
         "./spec/features/rename-spec.ts",
         "./spec/features/run-tests-spec.ts",
         "./spec/features/server-information-spec.ts",
+        "./spec/features/signature-help-spec.ts",
         "./spec/features/solution-information-spec.ts",
         "./spec/omnisharp-atom-spec.ts",
         "./spec/test-helpers.ts",
