--- a/tsconfig.json
+++ b/tsconfig.json
@@ -82,6 +82,7 @@
         "./lib/omnisharp-atom/views/find-symbols-view.ts",
         "./lib/omnisharp-atom/views/framework-selector-view.ts",
         "./lib/omnisharp-atom/views/generic-list-view.ts",
+        "./lib/omnisharp-atom/views/highlight-element.ts",
         "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
         "./lib/omnisharp-atom/views/react-client-component.ts",
         "./lib/omnisharp-atom/views/rename-view.ts",
