Works, but needs some tweaks in the client to properly handle one based indexes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "module": "commonjs",
         "declaration": false,
         "noImplicitAny": false,
-        "removeComments": false
+        "removeComments": false,
+        "emitDecoratorMetadata": false
     },
     "moduleResolution": "node",
     "formatCodeOptions": {
