Added worker for view-model projects, refactored project view-modesl

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,9 +36,11 @@
         "lib/omni-sharp-server/composite-solution.ts",
         "lib/omni-sharp-server/omni.ts",
         "lib/omni-sharp-server/omnisharp-configuration.ts",
+        "lib/omni-sharp-server/project-view-model.ts",
         "lib/omni-sharp-server/solution-manager.ts",
         "lib/omni-sharp-server/solution.ts",
         "lib/omni-sharp-server/view-model.ts",
+        "lib/omni-sharp-server/view-model.worker.ts",
         "lib/omnisharp-atom/atom/dock.ts",
         "lib/omnisharp-atom/atom/feature-buttons.ts",
         "lib/omnisharp-atom/atom/framework-selector.ts",
