--- a/package.json
+++ b/package.json
@@ -58,31 +58,31 @@
   },
   "dependencies": {
     "ansi-to-html": "^0.3.0",
-    "atom-package-deps": "^2.0.5",
+    "atom-package-deps": "^2.1.3",
     "atom-space-pen-views": "^2.1.0",
-    "bluebird": "^2.9.30",
+    "bluebird": "^2.10.2",
     "del": "^1.1.1",
     "escape-html": "^1.0.1",
-    "event-kit": "^1.3.0",
+    "event-kit": "^1.4.1",
     "fastdom": "^0.8.6",
     "font-awesome": "^4.4.0",
     "fs-plus": "^2.3.1",
     "fuzzaldrin": "^2.1.0",
-    "generator-aspnet": "0.0.60",
-    "glob": "^5.0.5",
+    "generator-aspnet": "0.0.75",
+    "glob": "^5.0.15",
     "gulp": "^3.8.11",
     "gulp-util": "^3.0.6",
     "jquery": "^2.1.1",
     "lodash": "^3.10.1",
-    "merge-stream": "^0.1.7",
-    "ntypescript": "1.201509010003.1",
+    "merge-stream": "^1.0.0",
+    "ntypescript": "^1.201510130006.1",
     "omnisharp-client": "^3.0.0",
-    "react": "^0.13.3",
-    "rimraf": "^2.4.2",
-    "rx": "^3.1.2",
-    "semver": "^4.2.0",
+    "react": "^0.14.0",
+    "rimraf": "^2.4.3",
+    "rx": "^4.0.4",
+    "semver": "^5.0.3",
     "through2": "^2.0.0",
-    "tsd": "^0.6.4"
+    "tsd": "^0.6.5"
   },
   "consumedServices": {
     "status-bar": {
