--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,137 +1,130 @@
 {
-  "externalTranspiler": {
-    "name": "babel",
-    "options": {}
-  },
-  "compilerOptions": {
-    "target": "es6",
-    "module": "es6",
+    "compilerOptions": {
+        "target": "es5",
+        "module": "commonjs",
+        "declaration": false,
+        "noImplicitAny": false,
+        "removeComments": false,
+        "emitDecoratorMetadata": true,
+        "experimentalAsyncFunctions": true
+    },
     "moduleResolution": "node",
-    "declaration": false,
-    "noImplicitAny": true,
-    "removeComments": true,
-    "noLib": false,
-    "preserveConstEnums": true,
-    "experimentalDecorators": true
-  },
-  "compileOnSave": true,
-  "formatCodeOptions": {
-    "indentSize": 4,
-    "tabSize": 4,
-    "indentStyle": "smart",
-    "convertTabsToSpaces": true,
-    "insertSpaceAfterCommaDelimiter": true,
-    "insertSpaceAfterSemicolonInForStatements": true,
-    "insertSpaceBeforeAndAfterBinaryOperators": true,
-    "insertSpaceAfterKeywordsInControlFlowStatements": true,
-    "insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
-    "insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": false,
-    "placeOpenBraceOnNewLineForFunctions": false,
-    "placeOpenBraceOnNewLineForControlBlocks": false
-  },
-  "filesGlob": [
-    "./lib/**/*.ts",
-    "!./lib/**/*.d.ts",
-    "./spec/**/*.ts",
-    "!./spec/**/*.d.ts",
-    "./tsd.d.ts",
-    "./lib/typings.d.ts"
-  ],
-  "files": [
-    "./lib/atom/command-runner.ts",
-    "./lib/atom/dock.ts",
-    "./lib/atom/feature-buttons.ts",
-    "./lib/atom/framework-selector.ts",
-    "./lib/atom/generator-aspnet.ts",
-    "./lib/atom/menu.ts",
-    "./lib/atom/server-information.ts",
-    "./lib/atom/settings-button.ts",
-    "./lib/atom/solution-information.ts",
-    "./lib/atom/status-bar.ts",
-    "./lib/atom/update-projects.ts",
-    "./lib/features/code-action.ts",
-    "./lib/features/code-check.ts",
-    "./lib/features/code-format.ts",
-    "./lib/features/code-lens.ts",
-    "./lib/features/find-symbols.ts",
-    "./lib/features/find-usages.ts",
-    "./lib/features/go-to-definition.ts",
-    "./lib/features/highlight.ts",
-    "./lib/features/intellisense.ts",
-    "./lib/features/lookup.ts",
-    "./lib/features/navigate-up-down.ts",
-    "./lib/features/notification-handler.ts",
-    "./lib/features/package-restore.ts",
-    "./lib/features/project-lock.ts",
-    "./lib/features/reload-workspace.ts",
-    "./lib/features/rename.ts",
-    "./lib/features/run-tests.ts",
-    "./lib/features/signature-help.ts",
-    "./lib/omnisharp-atom.ts",
-    "./lib/omnisharp.ts",
-    "./lib/server/atom-projects.ts",
-    "./lib/server/composite-solution.ts",
-    "./lib/server/omni.ts",
-    "./lib/server/omnisharp-configuration.ts",
-    "./lib/server/project-view-model.ts",
-    "./lib/server/solution-manager.ts",
-    "./lib/server/solution.ts",
-    "./lib/server/view-model.ts",
-    "./lib/services/apply-changes.ts",
-    "./lib/services/completion-provider.ts",
-    "./lib/services/framework-provider.ts",
-    "./lib/services/linter-provider.ts",
-    "./lib/services/omni-select-list-view.ts",
-    "./lib/services/project-provider.ts",
-    "./lib/views/build-output-pane-view.ts",
-    "./lib/views/code-actions-view.ts",
-    "./lib/views/codecheck-output-pane-view.ts",
-    "./lib/views/command-output-window.ts",
-    "./lib/views/dock-window.ts",
-    "./lib/views/find-pane-view.ts",
-    "./lib/views/find-symbols-view.ts",
-    "./lib/views/framework-selector-view.ts",
-    "./lib/views/generic-list-view.ts",
-    "./lib/views/highlight-element.ts",
-    "./lib/views/omni-output-pane-view.ts",
-    "./lib/views/react-client-component.ts",
-    "./lib/views/rename-view.ts",
-    "./lib/views/signature-help-view.ts",
-    "./lib/views/solution-status-view.ts",
-    "./lib/views/status-bar-view.ts",
-    "./lib/views/test-results-window.ts",
-    "./lib/views/tooltip-view.ts",
-    "./spec/atom/dock-spec.ts",
-    "./spec/atom/framework-selector-spec.ts",
-    "./spec/atom/solution-information-spec.ts",
-    "./spec/atom/status-bar-spec.ts",
-    "./spec/atom/update-project-spec.ts",
-    "./spec/features/code-format-spec.ts",
-    "./spec/features/code-lens-spec.ts",
-    "./spec/features/command-runner-spec.ts",
-    "./spec/features/find-symbols-spec.ts",
-    "./spec/features/find-usages-spec.ts",
-    "./spec/features/go-to-definition-spec.ts",
-    "./spec/features/highlight-spec.ts",
-    "./spec/features/intellisense-spec.ts",
-    "./spec/features/log-spec.ts",
-    "./spec/features/lookup-spec.ts",
-    "./spec/features/navigate-up-down-spec.ts",
-    "./spec/features/package-restore-spec.ts",
-    "./spec/features/project-lock-spec.ts",
-    "./spec/features/rename-spec.ts",
-    "./spec/features/run-tests-spec.ts",
-    "./spec/features/server-information-spec.ts",
-    "./spec/features/signature-help-spec.ts",
-    "./spec/omnisharp-atom-spec.ts",
-    "./spec/server/solution-manager-spec.ts",
-    "./spec/test-helpers.ts",
-    "./spec/test-runner.ts",
-    "./tsd.d.ts",
-    "./lib/typings.d.ts"
-  ],
-  "exclude": [],
-  "atom": {
-    "rewriteTsconfig": true
-  }
+    "formatCodeOptions": {
+        "indentSize": 4,
+        "tabSize": 4,
+        "convertTabsToSpaces": true,
+        "insertSpaceAfterCommaDelimiter": true,
+        "insertSpaceAfterSemicolonInForStatements": true,
+        "insertSpaceBeforeAndAfterBinaryOperators": true,
+        "insertSpaceAfterKeywordsInControlFlowStatements": true,
+        "insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
+        "insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": false,
+        "placeOpenBraceOnNewLineForFunctions": false,
+        "placeOpenBraceOnNewLineForControlBlocks": false
+    },
+    "compileOnSave": true,
+    "filesGlob": [
+        "./**/*.ts",
+        "!./typings/**/*.d.ts",
+        "!./typingsTemp/**/*.d.ts",
+        "!./node_modules/**/*.ts"
+    ],
+    "files": [
+        "./lib/atom/command-runner.ts",
+        "./lib/atom/dock.ts",
+        "./lib/atom/feature-buttons.ts",
+        "./lib/atom/framework-selector.ts",
+        "./lib/atom/generator-aspnet.ts",
+        "./lib/atom/menu.ts",
+        "./lib/atom/server-information.ts",
+        "./lib/atom/settings-button.ts",
+        "./lib/atom/solution-information.ts",
+        "./lib/atom/status-bar.ts",
+        "./lib/atom/update-projects.ts",
+        "./lib/features/code-action.ts",
+        "./lib/features/code-check.ts",
+        "./lib/features/code-format.ts",
+        "./lib/features/code-lens.ts",
+        "./lib/features/find-symbols.ts",
+        "./lib/features/find-usages.ts",
+        "./lib/features/go-to-definition.ts",
+        "./lib/features/highlight.ts",
+        "./lib/features/intellisense.ts",
+        "./lib/features/lookup.ts",
+        "./lib/features/navigate-up-down.ts",
+        "./lib/features/notification-handler.ts",
+        "./lib/features/package-restore.ts",
+        "./lib/features/project-lock.ts",
+        "./lib/features/reload-workspace.ts",
+        "./lib/features/rename.ts",
+        "./lib/features/run-tests.ts",
+        "./lib/features/signature-help.ts",
+        "./lib/omnisharp-atom.ts",
+        "./lib/omnisharp.ts",
+        "./lib/server/atom-projects.ts",
+        "./lib/server/composite-solution.ts",
+        "./lib/server/omni.ts",
+        "./lib/server/omnisharp-configuration.ts",
+        "./lib/server/project-view-model.ts",
+        "./lib/server/solution-manager.ts",
+        "./lib/server/solution.ts",
+        "./lib/server/view-model.ts",
+        "./lib/services/apply-changes.ts",
+        "./lib/services/completion-provider.ts",
+        "./lib/services/framework-provider.ts",
+        "./lib/services/linter-provider.ts",
+        "./lib/services/omni-select-list-view.ts",
+        "./lib/services/project-provider.ts",
+        "./lib/typings.d.ts",
+        "./lib/views/build-output-pane-view.ts",
+        "./lib/views/code-actions-view.ts",
+        "./lib/views/codecheck-output-pane-view.ts",
+        "./lib/views/command-output-window.ts",
+        "./lib/views/dock-window.ts",
+        "./lib/views/find-pane-view.ts",
+        "./lib/views/find-symbols-view.ts",
+        "./lib/views/framework-selector-view.ts",
+        "./lib/views/generic-list-view.ts",
+        "./lib/views/highlight-element.ts",
+        "./lib/views/omni-output-pane-view.ts",
+        "./lib/views/react-client-component.ts",
+        "./lib/views/rename-view.ts",
+        "./lib/views/signature-help-view.ts",
+        "./lib/views/solution-status-view.ts",
+        "./lib/views/status-bar-view.ts",
+        "./lib/views/test-results-window.ts",
+        "./lib/views/tooltip-view.ts",
+        "./spec/atom/dock-spec.ts",
+        "./spec/atom/framework-selector-spec.ts",
+        "./spec/atom/solution-information-spec.ts",
+        "./spec/atom/status-bar-spec.ts",
+        "./spec/atom/update-project-spec.ts",
+        "./spec/features/code-format-spec.ts",
+        "./spec/features/code-lens-spec.ts",
+        "./spec/features/command-runner-spec.ts",
+        "./spec/features/find-symbols-spec.ts",
+        "./spec/features/find-usages-spec.ts",
+        "./spec/features/go-to-definition-spec.ts",
+        "./spec/features/highlight-spec.ts",
+        "./spec/features/intellisense-spec.ts",
+        "./spec/features/log-spec.ts",
+        "./spec/features/lookup-spec.ts",
+        "./spec/features/navigate-up-down-spec.ts",
+        "./spec/features/package-restore-spec.ts",
+        "./spec/features/project-lock-spec.ts",
+        "./spec/features/rename-spec.ts",
+        "./spec/features/run-tests-spec.ts",
+        "./spec/features/server-information-spec.ts",
+        "./spec/features/signature-help-spec.ts",
+        "./spec/omnisharp-atom-spec.ts",
+        "./spec/server/solution-manager-spec.ts",
+        "./spec/test-helpers.ts",
+        "./spec/test-runner.ts",
+        "./spec/tsd.d.ts",
+        "./tsd.d.ts"
+    ],
+    "exclude": [],
+    "atom": {
+        "rewriteTsconfig": true
+    }
 }
