--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "generator-aspnet": "0.0.81",
     "glob": "^5.0.15",
     "gulp": "^3.8.11",
+    "gulp-babel": "^6.1.0",
+    "gulp-tslint": "^3.6.0",
     "gulp-util": "^3.0.7",
     "jquery": "^2.1.1",
     "lodash": "^3.10.1",
@@ -124,5 +126,11 @@
     "linter",
     "json-schema",
     "advanced-open-file"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.20",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-3": "^6.1.18",
+    "ntypescript": "^1.201511140604.1"
+  }
 }
