First wave of retypings!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,102 +33,75 @@
   "filesGlob": [
     "./lib/**/*.ts",
     "!./lib/**/*.d.ts",
-    "./spec/**/*.ts",
-    "!./spec/**/*.d.ts"
+    "./tsd.d.ts",
+    "./lib/typings.d.ts"
   ],
   "files": [
-    "lib/es6.d.ts",
-    "lib/omni-sharp-server/atom-projects.ts",
-    "lib/omni-sharp-server/composite-solution.ts",
-    "lib/omni-sharp-server/omni.ts",
-    "lib/omni-sharp-server/omnisharp-configuration.ts",
-    "lib/omni-sharp-server/project-view-model.ts",
-    "lib/omni-sharp-server/solution-manager.ts",
-    "lib/omni-sharp-server/solution.ts",
-    "lib/omni-sharp-server/view-model.ts",
-    "lib/omnisharp-atom/atom/command-runner.ts",
-    "lib/omnisharp-atom/atom/dock.ts",
-    "lib/omnisharp-atom/atom/feature-buttons.ts",
-    "lib/omnisharp-atom/atom/framework-selector.ts",
-    "lib/omnisharp-atom/atom/generator-aspnet.ts",
-    "lib/omnisharp-atom/atom/menu.ts",
-    "lib/omnisharp-atom/atom/server-information.ts",
-    "lib/omnisharp-atom/atom/settings-button.ts",
-    "lib/omnisharp-atom/atom/solution-information.ts",
-    "lib/omnisharp-atom/atom/status-bar.ts",
-    "lib/omnisharp-atom/atom/update-projects.ts",
-    "lib/omnisharp-atom/configure-rx.ts",
-    "lib/omnisharp-atom/features/code-action.ts",
-    "lib/omnisharp-atom/features/code-check.ts",
-    "lib/omnisharp-atom/features/code-format.ts",
-    "lib/omnisharp-atom/features/code-lens.ts",
-    "lib/omnisharp-atom/features/find-symbols.ts",
-    "lib/omnisharp-atom/features/find-usages.ts",
-    "lib/omnisharp-atom/features/go-to-definition.ts",
-    "lib/omnisharp-atom/features/highlight.ts",
-    "lib/omnisharp-atom/features/intellisense.ts",
-    "lib/omnisharp-atom/features/lookup.ts",
-    "lib/omnisharp-atom/features/navigate-up-down.ts",
-    "lib/omnisharp-atom/features/notification-handler.ts",
-    "lib/omnisharp-atom/features/package-restore.ts",
-    "lib/omnisharp-atom/features/project-lock.ts",
-    "lib/omnisharp-atom/features/reload-workspace.ts",
-    "lib/omnisharp-atom/features/rename.ts",
-    "lib/omnisharp-atom/features/run-tests.ts",
-    "lib/omnisharp-atom/features/signature-help.ts",
-    "lib/omnisharp-atom/omnisharp-atom.ts",
-    "lib/omnisharp-atom/services/apply-changes.ts",
-    "lib/omnisharp-atom/services/completion-provider.ts",
-    "lib/omnisharp-atom/services/framework-provider.ts",
-    "lib/omnisharp-atom/services/linter-provider.ts",
-    "lib/omnisharp-atom/services/omni-select-list-view.ts",
-    "lib/omnisharp-atom/services/project-provider.ts",
-    "lib/omnisharp-atom/views/build-output-pane-view.ts",
-    "lib/omnisharp-atom/views/code-actions-view.ts",
-    "lib/omnisharp-atom/views/codecheck-output-pane-view.ts",
-    "lib/omnisharp-atom/views/command-output-window.ts",
-    "lib/omnisharp-atom/views/dock-window.ts",
-    "lib/omnisharp-atom/views/find-pane-view.ts",
-    "lib/omnisharp-atom/views/find-symbols-view.ts",
-    "lib/omnisharp-atom/views/framework-selector-view.ts",
-    "lib/omnisharp-atom/views/generic-list-view.ts",
-    "lib/omnisharp-atom/views/highlight-element.ts",
-    "lib/omnisharp-atom/views/omni-output-pane-view.ts",
-    "lib/omnisharp-atom/views/react-client-component.ts",
-    "lib/omnisharp-atom/views/rename-view.ts",
-    "lib/omnisharp-atom/views/signature-help-view.ts",
-    "lib/omnisharp-atom/views/solution-status-view.ts",
-    "lib/omnisharp-atom/views/status-bar-view.ts",
-    "lib/omnisharp-atom/views/test-results-window.ts",
-    "lib/omnisharp-atom/views/tooltip-view.ts",
-    "lib/typings.d.ts",
-    "spec/atom/dock-spec.ts",
-    "spec/atom/framework-selector-spec.ts",
-    "spec/atom/solution-information-spec.ts",
-    "spec/atom/status-bar-spec.ts",
-    "spec/atom/update-project-spec.ts",
-    "spec/client-manager-spec.ts",
-    "spec/features/code-format-spec.ts",
-    "spec/features/code-lens-spec.ts",
-    "spec/features/command-runner-spec.ts",
-    "spec/features/find-symbols-spec.ts",
-    "spec/features/find-usages-spec.ts",
-    "spec/features/go-to-definition-spec.ts",
-    "spec/features/highlight-spec.ts",
-    "spec/features/intellisense-spec.ts",
-    "spec/features/log-spec.ts",
-    "spec/features/lookup-spec.ts",
-    "spec/features/navigate-up-down-spec.ts",
-    "spec/features/package-restore-spec.ts",
-    "spec/features/project-lock-spec.ts",
-    "spec/features/rename-spec.ts",
-    "spec/features/run-tests-spec.ts",
-    "spec/features/server-information-spec.ts",
-    "spec/features/signature-help-spec.ts",
-    "spec/omnisharp-atom-spec.ts",
-    "spec/test-helpers.ts",
-    "spec/tsd.d.ts",
-    "tsd.d.ts"
+    "./tsd.d.ts",
+    "./lib/typings.d.ts",
+    "./lib/omni-sharp-server/atom-projects.ts",
+    "./lib/omni-sharp-server/composite-solution.ts",
+    "./lib/omni-sharp-server/omni.ts",
+    "./lib/omni-sharp-server/omnisharp-configuration.ts",
+    "./lib/omni-sharp-server/project-view-model.ts",
+    "./lib/omni-sharp-server/solution-manager.ts",
+    "./lib/omni-sharp-server/solution.ts",
+    "./lib/omni-sharp-server/view-model.ts",
+    "./lib/omnisharp-atom/atom/command-runner.ts",
+    "./lib/omnisharp-atom/atom/dock.ts",
+    "./lib/omnisharp-atom/atom/feature-buttons.ts",
+    "./lib/omnisharp-atom/atom/framework-selector.ts",
+    "./lib/omnisharp-atom/atom/generator-aspnet.ts",
+    "./lib/omnisharp-atom/atom/menu.ts",
+    "./lib/omnisharp-atom/atom/server-information.ts",
+    "./lib/omnisharp-atom/atom/settings-button.ts",
+    "./lib/omnisharp-atom/atom/solution-information.ts",
+    "./lib/omnisharp-atom/atom/status-bar.ts",
+    "./lib/omnisharp-atom/atom/update-projects.ts",
+    "./lib/omnisharp-atom/configure-rx.ts",
+    "./lib/omnisharp-atom/features/code-action.ts",
+    "./lib/omnisharp-atom/features/code-check.ts",
+    "./lib/omnisharp-atom/features/code-format.ts",
+    "./lib/omnisharp-atom/features/code-lens.ts",
+    "./lib/omnisharp-atom/features/find-symbols.ts",
+    "./lib/omnisharp-atom/features/find-usages.ts",
+    "./lib/omnisharp-atom/features/go-to-definition.ts",
+    "./lib/omnisharp-atom/features/highlight.ts",
+    "./lib/omnisharp-atom/features/intellisense.ts",
+    "./lib/omnisharp-atom/features/lookup.ts",
+    "./lib/omnisharp-atom/features/navigate-up-down.ts",
+    "./lib/omnisharp-atom/features/notification-handler.ts",
+    "./lib/omnisharp-atom/features/package-restore.ts",
+    "./lib/omnisharp-atom/features/project-lock.ts",
+    "./lib/omnisharp-atom/features/reload-workspace.ts",
+    "./lib/omnisharp-atom/features/rename.ts",
+    "./lib/omnisharp-atom/features/run-tests.ts",
+    "./lib/omnisharp-atom/features/signature-help.ts",
+    "./lib/omnisharp-atom/omnisharp-atom.ts",
+    "./lib/omnisharp-atom/services/apply-changes.ts",
+    "./lib/omnisharp-atom/services/completion-provider.ts",
+    "./lib/omnisharp-atom/services/framework-provider.ts",
+    "./lib/omnisharp-atom/services/linter-provider.ts",
+    "./lib/omnisharp-atom/services/omni-select-list-view.ts",
+    "./lib/omnisharp-atom/services/project-provider.ts",
+    "./lib/omnisharp-atom/views/build-output-pane-view.ts",
+    "./lib/omnisharp-atom/views/code-actions-view.ts",
+    "./lib/omnisharp-atom/views/codecheck-output-pane-view.ts",
+    "./lib/omnisharp-atom/views/command-output-window.ts",
+    "./lib/omnisharp-atom/views/dock-window.ts",
+    "./lib/omnisharp-atom/views/find-pane-view.ts",
+    "./lib/omnisharp-atom/views/find-symbols-view.ts",
+    "./lib/omnisharp-atom/views/framework-selector-view.ts",
+    "./lib/omnisharp-atom/views/generic-list-view.ts",
+    "./lib/omnisharp-atom/views/highlight-element.ts",
+    "./lib/omnisharp-atom/views/omni-output-pane-view.ts",
+    "./lib/omnisharp-atom/views/react-client-component.ts",
+    "./lib/omnisharp-atom/views/rename-view.ts",
+    "./lib/omnisharp-atom/views/signature-help-view.ts",
+    "./lib/omnisharp-atom/views/solution-status-view.ts",
+    "./lib/omnisharp-atom/views/status-bar-view.ts",
+    "./lib/omnisharp-atom/views/test-results-window.ts",
+    "./lib/omnisharp-atom/views/tooltip-view.ts"
   ],
   "exclude": []
 }
