--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "omnisharp-atom",
   "main": "./lib/omnisharp-atom/omnisharp-atom",
+  "atomTestRunner": "./spec/test-runner",
   "version": "0.25.10",
   "description": "Brings the wonderful OmniSharp server to powercharge Atom's C# development experience",
   "keywords": [
