--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "atom-package-deps": "^2.1.3",
     "atom-space-pen-views": "^2.1.0",
     "bluebird": "^2.10.2",
+    "chai": "^3.4.1",
     "del": "^1.1.1",
     "escape-html": "^1.0.1",
     "event-kit": "^1.4.1",
@@ -71,6 +72,7 @@
     "fuzzaldrin": "^2.1.0",
     "generator-aspnet": "0.0.81",
     "glob": "^5.0.15",
+    "globby": "^4.0.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^6.1.0",
     "gulp-tslint": "^3.6.0",
@@ -78,6 +80,7 @@
     "jquery": "^2.1.1",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
+    "mocha": "^2.3.4",
     "ntypescript": "^1.201510130006.1",
     "omnisharp-client": "^3.1.0",
     "react": "^0.14.0",
