--- a/package.json
+++ b/package.json
@@ -88,7 +88,10 @@
     "rx": "^4.0.6",
     "semver": "^5.0.3",
     "through2": "^2.0.0",
-    "tsd": "^0.6.5"
+    "tsd": "^0.6.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-3": "^6.1.18"
   },
   "consumedServices": {
     "status-bar": {
