--- a/package.json
+++ b/package.json
@@ -59,9 +59,12 @@
   },
   "dependencies": {
     "ansi-to-html": "^0.3.0",
-    "atom-package-deps": "^2.1.3",
+    "atom-package-deps": "^3.0.2",
     "atom-space-pen-views": "^2.1.0",
-    "bluebird": "^2.10.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-3": "^6.1.18",
+    "bluebird": "^3.0.5",
     "chai": "^3.4.1",
     "del": "^1.1.1",
     "escape-html": "^1.0.1",
@@ -70,8 +73,8 @@
     "font-awesome": "^4.4.0",
     "fs-plus": "^2.3.1",
     "fuzzaldrin": "^2.1.0",
-    "generator-aspnet": "0.0.81",
-    "glob": "^5.0.15",
+    "generator-aspnet": "0.0.91",
+    "glob": "^6.0.1",
     "globby": "^4.0.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^6.1.0",
@@ -81,17 +84,14 @@
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
     "mocha": "^2.3.4",
-    "ntypescript": "^1.201510130006.1",
+    "ntypescript": "^1.201511200604.1",
     "omnisharp-client": "^3.1.0",
     "react": "^0.14.0",
-    "rimraf": "^2.4.3",
+    "rimraf": "^2.4.4",
     "rx": "^4.0.6",
     "semver": "^5.0.3",
     "through2": "^2.0.0",
-    "tsd": "^0.6.5",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-3": "^6.1.18"
+    "tsd": "^0.6.5"
   },
   "consumedServices": {
     "status-bar": {
