--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
     "mocha": "^2.3.4",
+    "mocha-unfunk-reporter": "^0.4.0",
     "ntypescript": "^1.201511200604.1",
     "omnisharp-client": "^3.1.0",
     "react": "^0.14.0",
