--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
-language: objective-c
-
 notifications:
   email:
-    on_success: never
+    on_success: change
     on_failure: change
 
 before_install:
@@ -19,5 +17,22 @@ script:
 git:
   depth: 10
 
+os:
+  - linux
+  - osx
+
 env:
-  - APM_TEST_PACKAGES='atom-yeoman linter json-schema advanced-open-file'
+  global:
+    - APM_TEST_PACKAGES='atom-yeoman linter json-schema advanced-open-file'
+
+  matrix:
+    - ATOM_CHANNEL=stable
+    - ATOM_CHANNEL=beta
+
+addons:
+  apt:
+    packages:
+    - build-essential
+    - git
+    - libgnome-keyring-dev
+    - fakeroot
