--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "through2": "^2.0.0",
     "tsd": "^0.6.5",
     "tslint": "^3.0.0",
-    "typescript": "^1.7.3"
+    "typescript": "1.6.2"
   },
   "consumedServices": {
     "status-bar": {
