Removed react, first commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -87,6 +87,7 @@
     "./lib/views/code-actions-view.ts",
     "./lib/views/codecheck-output-pane-view.ts",
     "./lib/views/command-output-window.ts",
+    "./lib/views/component.ts",
     "./lib/views/dock-window.ts",
     "./lib/views/find-pane-view.ts",
     "./lib/views/find-symbols-view.ts",
@@ -94,7 +95,8 @@
     "./lib/views/generic-list-view.ts",
     "./lib/views/highlight-element.ts",
     "./lib/views/omni-output-pane-view.ts",
-    "./lib/views/react-client-component.ts",
+    "./lib/views/output-component.ts",
+    "./lib/views/output-message-element.ts",
     "./lib/views/rename-view.ts",
     "./lib/views/signature-help-view.ts",
     "./lib/views/solution-status-view.ts",
