Replaced the code that handles how editors are setup, to ensure that we only forward editors that have the new omnisharp context attached.  This removes the need for an additional property 'observeOmnisharp'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -71,8 +71,10 @@
     "./lib/omnisharp.ts",
     "./lib/server/atom-projects.ts",
     "./lib/server/composite-solution.ts",
+    "./lib/server/metadata-editor.ts",
     "./lib/server/omni.ts",
     "./lib/server/omnisharp-configuration.ts",
+    "./lib/server/omnisharp-text-editor.ts",
     "./lib/server/project-view-model.ts",
     "./lib/server/solution-manager.ts",
     "./lib/server/solution.ts",
