--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "atom-package-deps": "^3.0.7",
     "atom-space-pen-views": "^2.1.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.3.13",
+    "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-3": "^6.3.13",
     "chai": "^3.5.0",
