--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
   ],
   "scripts": {
     "postinstall": "./node_modules/.bin/gulp npm-postinstall",
-    "prepublish": "./node_modules/.bin/gulp npm-prepublish"
+    "prepublish": "typings install && gulp npm-prepublish"
   },
   "dependencies": {
     "ansi-to-html": "^0.3.0",
-    "atom-package-deps": "^3.0.7",
+    "atom-package-deps": "^4.0.1",
     "atom-space-pen-views": "^2.1.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
@@ -71,26 +71,26 @@
     "font-awesome": "^4.5.0",
     "fs-plus": "^2.3.1",
     "fuzzaldrin": "^2.1.0",
-    "generator-aspnet": "0.0.92",
-    "glob": "^6.0.4",
+    "generator-aspnet": "0.0.93",
+    "glob": "^7.0.0",
     "globby": "^4.0.0",
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-tslint": "^4.3.1",
+    "gulp-tslint": "^4.3.2",
     "gulp-util": "^3.0.7",
     "jquery": "^2.2.0",
-    "lodash": "^3.10.1",
+    "lodash": "^4.5.0",
     "merge-stream": "^1.0.0",
     "mocha": "^2.4.5",
     "mocha-unfunk-reporter": "^0.4.0",
     "ntypescript": "^1.201512040604.1",
     "omnisharp-client": "^3.3.6",
-    "rimraf": "^2.5.1",
-    "rx": "^4.0.7",
+    "rimraf": "^2.5.2",
+    "rx": "^4.0.8",
     "semver": "^5.0.3",
-    "through2": "^2.0.0",
+    "through2": "^2.0.1",
     "tsd": "^0.6.5",
-    "tslint": "^3.3.0",
+    "tslint": "^3.4.0",
     "typescript": "^1.7.5"
   },
   "consumedServices": {
@@ -135,9 +135,9 @@
     "advanced-open-file"
   ],
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.4.5",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-3": "^6.3.13",
-    "ntypescript": "^1.201602042220.1"
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-3": "^6.5.0",
+    "ntypescript": "^1.201602202304.1"
   }
 }
