--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
     "merge-stream": "^1.0.0",
     "mocha": "^2.4.5",
     "mocha-unfunk-reporter": "^0.4.0",
-    "ntypescript": "^1.201512040604.1",
     "omnisharp-client": "^3.4.1",
     "rimraf": "^2.5.2",
     "rx": "^4.1.0",
@@ -137,7 +136,6 @@
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-3": "^6.5.0",
-    "ntypescript": "^1.201603200105.1"
+    "babel-preset-stage-3": "^6.5.0"
   }
 }
