Finished breaking changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noLib": false,
     "preserveConstEnums": true,
     "experimentalDecorators": true,
+    "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true
   },
   "compileOnSave": true,
