--- a/package.json
+++ b/package.json
@@ -76,20 +76,21 @@
     "globby": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-sourcemap": "^1.0.1",
     "gulp-tslint": "^4.3.2",
+    "gulp-typescript": "^2.12.1",
     "gulp-util": "^3.0.7",
     "jquery": "^2.2.0",
     "lodash": "^4.5.0",
     "merge-stream": "^1.0.0",
     "mocha": "^2.4.5",
     "mocha-unfunk-reporter": "^0.4.0",
-    "ntypescript": "^1.201512040604.1",
     "omnisharp-client": "^4.0.0",
     "rimraf": "^2.5.2",
     "semver": "^5.0.3",
     "through2": "^2.0.1",
     "tslint": "^3.4.0",
-    "typescript": "^1.7.5",
+    "typescript": "^1.8.9",
     "typings": "^0.7.9"
   },
   "consumedServices": {
@@ -136,7 +137,6 @@
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
-    "babel-preset-stage-3": "^6.5.0",
-    "ntypescript": "^1.201602202304.1"
+    "babel-preset-stage-3": "^6.5.0"
   }
 }
