Fixed autocomplete not working correctly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "preserveConstEnums": true,
     "experimentalDecorators": true,
     "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true
+    "allowSyntheticDefaultImports": true
   },
   "compileOnSave": true,
   "formatCodeOptions": {
