--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "mocha-unfunk-reporter": "^0.4.0",
     "omnisharp-client": "^4.0.1",
     "rimraf": "^2.5.2",
+    "rxjs": "^5.0.0-beta.3",
     "semver": "^5.0.3",
     "through2": "^2.0.1",
     "tslint": "^3.4.0",
