Added missing dependency

--- a/package.json
+++ b/package.json
@@ -77,8 +77,9 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-sourcemap": "^1.0.1",
-    "gulp-typescript": "^2.12.1",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^4.3.3",
+    "gulp-typescript": "^2.12.1",
     "gulp-util": "^3.0.7",
     "jquery": "^2.2.2",
     "lodash": "^4.6.1",
