Added custom bufferFor operator, to only buffer when it recieve events

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -71,6 +71,7 @@
     "./lib/features/signature-help.ts",
     "./lib/omnisharp-atom.ts",
     "./lib/omnisharp.ts",
+    "./lib/operators/bufferFor.ts",
     "./lib/server/atom-projects.ts",
     "./lib/server/composite-solution.ts",
     "./lib/server/metadata-editor.ts",
